# nexus

./: .gitignore  CONTRIBUTING.md  README.md  code-of-conduct.md  lint.sh  pyproject.toml  test.sh  unittest.sh  unittest_alignment.sh  unittest_ci.sh  unittest_local.sh
.github/workflows/: alignment.yml  antigen_presentation_prediction.yml  assembly.yml  ci.yml  docs.yml  haplotyping.yml  hla_typing.yml  main.yml  novel_isoform_discovery.yml  quantification.yml  read_error_correction.yml  subworkflow_alignment.yml  subworkflow_antigen_prediction.yml  subworkflow_assembly.yml  subworkflow_haplotyping.yml  subworkflow_hla_typing.yml  subworkflow_isoform_characterization.yml  subworkflow_peptide_prediction.yml  subworkflow_quantification.yml  subworkflow_read_error_correction.yml  subworkflow_sequencing_simulation.yml  subworkflow_utilities.yml  subworkflow_variant_calling.yml  subworkflow_variant_phasing.yml  unittest_alignment.yml  unittest_assembly.yml  unittest_dna_variant_calling_paired_end_reads.yml  unittest_haplotyping.yml  unittest_hla_typing.yml  unittest_novel_isoform_discovery.yml  unittest_quantification.yml  unittest_read_error_correction.yml  unittest_utilities.yml  unittest_variant_calling_dna_long_reads.yml  unittest_variant_calling_dna_paired_end_reads.yml  unittest_variant_calling_rna_paired_end_reads.yml  unittest_variant_phasing_dna.yml  utilities.yml  variant_calling_dna_long_reads.yml  variant_calling_dna_paired_end_reads.yml  (+7 more)
configs/: nextflow_slurm.config
docs/: _quarto.yml  index.qmd
docs/subworkflows/: index.qmd
docs/utilities/: index.qmd
docs/workflows/: index.qmd
nextflow/: nexus_v0.1.0_nextflow_slurm.config  nexus_v0.1.10_nextflow_slurm.config  nexus_v0.1.11_nextflow_slurm.config  nexus_v0.1.12_nextflow_slurm.config  nexus_v0.1.13_nextflow_slurm.config  nexus_v0.1.14_nextflow_slurm.config  nexus_v0.1.15_nextflow_slurm.config  nexus_v0.1.16_nextflow_slurm.config  nexus_v0.1.1_nextflow_slurm.config  nexus_v0.1.3_nextflow_slurm.config  nexus_v0.1.4_nextflow_slurm.config  nexus_v0.1.5_nextflow_slurm.config  nexus_v0.1.6_nextflow_slurm.config  nexus_v0.1.7_nextflow_slurm.config  nexus_v0.1.8_nextflow_slurm.config  nexus_v0.2.0_nextflow_slurm.config
pipelines/: nextflow.config
pipelines/modules/: abra2.nf  arcashla.nf  bwa.config  cutesv.config  cutesv.nf  deepvariant.nf  exacto.config  gatk4.config  gatk4.nf  lumpy.config  lumpy.nf  minimap2.config  minimap2.nf  picard.config  picard.nf  salmon.config  savana.config  savana.nf  sniffles2.config  sniffles2.nf  star.config  (+5 more)
playground/: generate_hg38_tp53_pacbio_dna_fastq_file.py  generate_hg38_tp53_pacbio_rna_fastq_file.py  generate_tp53_pacbio_dna_fastq_file.py
scripts/: create_normal_long_read_dna_fastq_file.py  create_normal_long_read_rna_fastq_file.py  create_normal_paired_end_read_dna_fastq_files.py  create_tumor_long_read_dna_fastq_file.py  create_tumor_long_read_rna_fastq_file.py  create_tumor_paired_end_read_dna_fastq_files.py  generate_docs.py
test/: data.py  nextflow.config  test_alignment_minimap2.sh  test_alignment_ultra.sh  test_fastq_to_unaligned_bam.py  test_long_read_alignment_minimap2.py  test_long_read_dna_small_variants.py  test_long_read_dna_somatic_structural_variants.py  test_long_read_dna_structural_variants.py  test_long_read_rna_alignment_ultra.py  test_novel_isoform_discovery_flair.py  test_novel_isoform_discovery_isoquant.py  test_novel_isoform_discovery_isoseq.py  test_paired_end_read_dna_alignment_bwa_mem2.py  test_paired_end_read_dna_somatic_small_variants.py  test_paired_end_read_dna_somatic_structural_variants.py  test_sequencing_coverage.py
(+1554 files in other folders)
